--- a/index.html
+++ b/index.html
@@ -4,6 +4,27 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./public/image.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <style>
+    footer {
+      background-color: #333;
+      color: #fff;
+      text-align: center;
+      padding: 20px;
+    }
+    footer a {
+      color: #fff;
+      text-decoration: none;
+      margin: 0 10px;
+    }
+    footer a:hover {
+      color: #00bcd4;
+    }
+    footer img {
+      width: 24px;
+      height: 24px;
+      vertical-align: middle;
+    }
+  </style>
     <title>RBAC</title>
   </head>
   <body>
